Layaway functions incomplete part 3 - Scanning incomplete